src/objects/Order_Line_Item_Status_Detail__c.object
<CustomObject>
    <description>Child object of Order Line Items, contains status updates from AS400</description>
    <fields>
        <fullName>Credit_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Order Line Item Status Details (Current Item)</relationshipLabel>
        <relationshipName>Order_Line_Item_Status_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Quantity__c</fullName>
        <description>Current Quantity</description>
        <label>Current Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Sku__c</fullName>
        <label>Current Sku</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status_Code__c</fullName>
        <description>2 Digit AS400 status code</description>
        <inlineHelpText>2 Digit AS400 status code</inlineHelpText>
        <label>Current Status Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <description>SFDC Status Value</description>
        <label>Current Status</label>
        <picklist>
            <picklistValues>
                <fullName>IN PROGRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENDING MERCHANT ACTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHIPPED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELLED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disposition_Number__c</fullName>
        <label>Disposition Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Item?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLineSplit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies if the update was part of a line split.</description>
        <inlineHelpText>Signifies if the update was part of a line split.</inlineHelpText>
        <label>Is Line Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Line Item</label>
        <referenceTo>Order_Line_Items__c</referenceTo>
        <relationshipLabel>Order Line Item Status Details</relationshipLabel>
        <relationshipName>Order_Line_Item_Status_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Status_Code__c</fullName>
        <label>Order Status Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status_Description__c</fullName>
        <label>Order Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Orders__c</referenceTo>
        <relationshipLabel>Order Line Item Status Details</relationshipLabel>
        <relationshipName>Order_Line_Item_Status_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Order Line Item Status Details</relationshipLabel>
        <relationshipName>Order_Line_Item_Status_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Quantity__c</fullName>
        <label>Previous Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Sku__c</fullName>
        <label>Previous Sku</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Status_Code__c</fullName>
        <description>Previous State of status code</description>
        <label>Previous Status Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <label>Previous Status</label>
        <picklist>
            <picklistValues>
                <fullName>IN PROGRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENDING MERCHANT ACTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHIPPED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELLED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipper__c</fullName>
        <description>Name of Shipping carrier</description>
        <inlineHelpText>Name of Shipping carrier</inlineHelpText>
        <label>Shipper</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Stamp__c</fullName>
        <description>Records Time Stamp for each update transaction</description>
        <inlineHelpText>Records Time Stamp for each update transaction</inlineHelpText>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tracking_Link__c</fullName>
        <label>Tracking Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Order Line Item Status Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Order__c</columns>
        <columns>Order_Line_Item__c</columns>
        <columns>Order_Status__c</columns>
        <columns>Order_Status_Code__c</columns>
        <columns>Current_Item__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Current_Sku__c</columns>
        <columns>Current_Status_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>0{0000000000}</displayFormat>
        <label>Status Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Item Status Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>